[gd_scene load_steps=5 format=3 uid="uid://dsma5h03j1xhi"]

[ext_resource type="Texture2D" uid="uid://f745bwbqra6i" path="res://assets/images/cloud-mountains-background.png" id="1_j30kl"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_m1axd"]
[ext_resource type="Script" path="res://scripts/SettingsMenu.gd" id="2_5iux5"]
[ext_resource type="Script" path="res://scripts/AboutMenu.gd" id="3_7wvdk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = -381.0
offset_right = 951.0
offset_bottom = 1440.0
scale = Vector2(8.52927, 3.13859)
texture = ExtResource("1_j30kl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "When Penguins Fly"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 24
script = ExtResource("1_m1axd")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings
"

[node name="AboutButton" type="Button" parent="MarginContainer/VBoxContainer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "About"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"

[node name="SettingsMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 24
script = ExtResource("2_5iux5")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music:"

[node name="MusicEnabledButton" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Sound Effects"

[node name="SoundEffectsEnabledButton" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="SettingsBackButton" type="Button" parent="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="AboutMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 24
script = ExtResource("3_7wvdk")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AboutMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "About"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/AboutMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer/AboutMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Version x.x.x"
horizontal_alignment = 1

[node name="LicenseLabel" type="Label" parent="MarginContainer/VBoxContainer/AboutMenu/VBoxContainer"]
layout_mode = 2
text = "Copyright (c) 2024 Isaac Beverly
GNU General Public License Version 3"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/AboutMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/AboutMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "View Source Code at"

[node name="LinkButton" type="LinkButton" parent="MarginContainer/VBoxContainer/AboutMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Codeberg.org"
uri = "https://codeberg.org/imbev/WhenPenguinsFly"

[node name="AboutBackButton" type="Button" parent="MarginContainer/VBoxContainer/AboutMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu/VBoxContainer/PlayButton" to="MarginContainer/VBoxContainer/MainMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu/VBoxContainer/SettingsButton" to="MarginContainer/VBoxContainer/MainMenu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu/VBoxContainer/AboutButton" to="MarginContainer/VBoxContainer/MainMenu" method="_on_about_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu/VBoxContainer/ExitButton" to="MarginContainer/VBoxContainer/MainMenu" method="_on_exit_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer/HBoxContainer/MusicEnabledButton" to="MarginContainer/VBoxContainer/SettingsMenu" method="_on_music_enabled_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer/HBoxContainer2/SoundEffectsEnabledButton" to="MarginContainer/VBoxContainer/SettingsMenu" method="_on_sound_effects_enabled_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsMenu/VBoxContainer/SettingsBackButton" to="MarginContainer/VBoxContainer/SettingsMenu" method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AboutMenu/VBoxContainer/AboutBackButton" to="MarginContainer/VBoxContainer/AboutMenu" method="_on_about_back_button_pressed"]
